# SpaceInvaders

./: .gitignore  CMakeLists.txt  README.md
include/: UFO.h  animation.h  enemy.h  game_manager.h  player.h  shield.h
src/: UFO.c  animation.c  enemy.c  game_manager.c  main.c  player.c  shield.c
